Dark mode part 9: fix contest problem name in light mode

--- a/judgels-frontends/raphael/src/routes/contests/contests/single/problems/ContestProblemCard/ContestProblemCard.scss
+++ b/judgels-frontends/raphael/src/routes/contests/contests/single/problems/ContestProblemCard/ContestProblemCard.scss
@@ -1,9 +1,5 @@
 @import '../../../../../../styles/base';
 
-.contest-problem-card__name {
-  float: left;
-}
-
-.contest-problem-card__status {
-  float: right;
+.bp4-light .contest-problem-card {
+  color: $primary-color !important;
 }
